# NBA_Predict

./: .dockerignore  .gitattributes  .gitignore  AI_USAGE.md  CONTRIBUTING.md  DATA_REPRODUCTION_2025_26.md  Dockerfile  Makefile  README.md  SHOWCASE.md  _quarto.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/reproducibility/: MANIFEST.json
docs/: usage.rst
legacy/: README.md
notebooks/: demo_pipeline.ipynb
report/: report.qmd
src/nba_predict/: __init__.py  cli.py  config.py  data.py  download.py  modeling.py  pipeline.py  reporting.py  reproducibility.py
tests/: test_reproducibility.py
