[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-predict"
version = "0.1.0"
description = "Reproducible Python pipeline for predicting NBA regular season games."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
data = [
    "nba_api==1.11.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
nba-predict = "nba_predict.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
